--- a/src/components/WcagToggle.css
+++ b/src/components/WcagToggle.css
@@ -1,4 +1,3 @@
-
 /** WCAG */
 
 .wcag-btt__wcag-hi {
@@ -16,10 +15,10 @@
   align-items: center !important;
   justify-content: flex-start !important;
   gap: 6px !important;
-  color:#fff!important;
-  width:100%!important;
-  height:40px!important;
-  flex-direction: row!important;
+  color: #fff !important;
+  width: 100% !important;
+  height: 40px !important;
+  flex-direction: row !important;
 }
 
 .wcag-btt__reset:hover {
@@ -39,7 +38,11 @@ body.wcag__contrast .wcag-btt__reset:hover {
 }
 
 /* Toggle button styles */
-
+body.wcag__contrast > div {
+  background-color: #000 !important;
+  color: #ffc107 !important;
+  border-color: #ffc107 !important;
+}
 
 .wcag-btt__toggle:hover {
   background-color: #5a6268 !important; /* Darker gray on hover */
@@ -76,7 +79,6 @@ body.wcag__contrast .wcag-btt__toggle.wcag-btt__active {
 
 /* Link button styles */
 .wcag-btt__link {
-
   display: flex !important;
   align-items: center !important;
   justify-content: flex-start !important;
@@ -92,17 +94,17 @@ body.wcag__contrast .wcag-btt__link {
   background-color: #28a745 !important;
   color: #fff !important;
   border-color: #28a745 !important;
-  font-weight:700;
+  font-weight: 700;
 }
 
 body.wcag__contrast .wcag-btt__link:hover {
   background-color: #218838 !important;
   border-color: #218838 !important;
 }
-body.wcag__contrast
-.wcag-btt__text-normal,
+body.wcag__contrast .wcag-btt__text-normal,
 body.wcag__contrast .wcag-btt__text-plus,
-body.wcag__contrast .wcag-btt__text-plus-plus, body.wcag__contrast .wcag-btt__wcag-lo {
+body.wcag__contrast .wcag-btt__text-plus-plus,
+body.wcag__contrast .wcag-btt__wcag-lo {
   border-color: #ffc107 !important;
 }
 /* Text size button styles */
@@ -112,7 +114,7 @@ body.wcag__contrast .wcag-btt__text-plus-plus, body.wcag__contrast .wcag-btt__wc
   display: flex !important;
   align-items: center !important;
   justify-content: flex-start !important;
-  gap:6px !important;
+  gap: 6px !important;
 }
 
 /* Icon wrapper - większe przestrzenie */
@@ -134,10 +136,10 @@ body.wcag__contrast .wcag-btt__text-plus-plus, body.wcag__contrast .wcag-btt__wc
   white-space: normal !important;
   line-height: 1.2 !important;
   padding: 6px !important;
-  display:flex;
+  display: flex;
   align-items: center;
   border-radius: 6px;
-  gap:6px;
+  gap: 6px;
 }
 
 /* Reset notification styles */
@@ -177,7 +179,7 @@ body.wcag__contrast .wcag-notification {
 }
 
 body {
-  line-height:1.5rem;
+  line-height: 1.5rem;
 }
 body.wcag__text-normal {
   font-size: 1rem;
@@ -200,13 +202,14 @@ body.wcag__contrast {
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
 }
-body.wcag__contrast .aside-wcag__toggle, body.wcag__contrast .wcag-btt{
+body.wcag__contrast .aside-wcag__toggle,
+body.wcag__contrast .wcag-btt {
   border-color: rgb(250 204 21 / var(--tw-text-opacity));
 }
-body.wcag__contrast .wcag-options button{
+body.wcag__contrast .wcag-options button {
   background-color: rgb(250 204 21 / var(--tw-text-opacity));
-  color:#000;
-  font-weight:700;
+  color: #000;
+  font-weight: 700;
 }
 body.wcag__contrast a {
   --tw-text-opacity: 1 !important;
@@ -227,7 +230,7 @@ body.wcag__contrast .wcag-btt {
 body.wcag__contrast .aside-wcag__toggle {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity)) !important;
-  color:#fff;
+  color: #fff;
 }
 
 body.wcag__contrast .wcag-btt__wcag-hi {
@@ -238,86 +241,86 @@ body.wcag__contrast .wcag-btt__wcag-lo {
   display: flex !important;
 }
 
-
 .wcag-container {
-    position: fixed; /* Fixed position for the entire widget */
-    left: -250px; /* Start off-screen */
-    width:250px;
-    top: 40px; /* Position from the top */
-    transition: transform 0.3s ease; /* Smooth transition */
-    z-index: 1000; /* Ensure it appears above other content */
-  }
-  
-  .wcag-container.show {
-    transform: translateX(249px); /* Slide into view */
-  }
-  .wcag-container.show .aside-wcag__toggle{
-    transform: translateX(125px); /* Slide into view */
-  }
-  .wcag-btt {
-    background-color: #fff; /* Light background color */
-    border:2px solid #007bff;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Shadow for depth */
-    border-radius:0 0 6px;
-  }
-  
-  .aside-wcag__toggle {
-    background-color: #fff; /* Button color */
-    border: 2px solid #007bff;
-    border-left:0px solid transparent;
-    color: #007bff; /* Text color */
-    padding: 2px; /* Padding for the button */
-    cursor: pointer; /* Pointer cursor on hover */
-    z-index: 1001; /* Ensure it appears above the panel */
-    position:fixed;
-    transform: translateX(125px) translateY(0);
-    height:50px;
-    width:50px;
-    margin-top:-2px;
-    margin-left:-2px;
-    border-radius: 0 6px 6px 0;
-  }
-  
-  .aside-wcag__toggle:hover {
-    background-color: #0056b3; /* Darker shade on hover */
-    color:#fff;
-  }
-  
-  .aside-wcag__toggle img {
-    height:auto;
-    max-width: 100%;
-  }
-  .wcag-options {
-    margin:6px;
-    display:flex;
-    flex-wrap: wrap;
-    gap:6px;
-  }
-  
-  .wcag-options button ,  .wcag-options a {
-    display: flex; /* Stack buttons vertically */
-    width: 100%; /* Full width */
-    background-color: #fff; /* Button color */
-    color: #007bff; /* Text color */
-    border: 2px solid #007bff;
-    cursor: pointer; /* Pointer cursor on hover */
-    flex: 1 1 calc(50% - 12px);
-    font-size:10px;
-    line-height:1.1;
-    text-decoration: none;
-    border-radius: 6px;
-    align-items: center;
-    font-weight:500;
-    justify-content: flex-start;
-    flex-direction: row;
-  }
-  
-  .wcag-options button:hover {
-    background-color: #007bff; /* Darker shade on hover */
-    color:#fff;
-  }
-  .wcag-options button img{
-    height:auto;
-    width:40px;
-    max-width: 100%;
-  }
+  position: fixed; /* Fixed position for the entire widget */
+  left: -250px; /* Start off-screen */
+  width: 250px;
+  top: 40px; /* Position from the top */
+  transition: transform 0.3s ease; /* Smooth transition */
+  z-index: 1000; /* Ensure it appears above other content */
+}
+
+.wcag-container.show {
+  transform: translateX(249px); /* Slide into view */
+}
+.wcag-container.show .aside-wcag__toggle {
+  transform: translateX(125px); /* Slide into view */
+}
+.wcag-btt {
+  background-color: #fff; /* Light background color */
+  border: 2px solid #007bff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Shadow for depth */
+  border-radius: 0 0 6px;
+}
+
+.aside-wcag__toggle {
+  background-color: #fff; /* Button color */
+  border: 2px solid #007bff;
+  border-left: 0px solid transparent;
+  color: #007bff; /* Text color */
+  padding: 2px; /* Padding for the button */
+  cursor: pointer; /* Pointer cursor on hover */
+  z-index: 1001; /* Ensure it appears above the panel */
+  position: fixed;
+  transform: translateX(125px) translateY(0);
+  height: 50px;
+  width: 50px;
+  margin-top: -2px;
+  margin-left: -2px;
+  border-radius: 0 6px 6px 0;
+}
+
+.aside-wcag__toggle:hover {
+  background-color: #0056b3; /* Darker shade on hover */
+  color: #fff;
+}
+
+.aside-wcag__toggle img {
+  height: auto;
+  max-width: 100%;
+}
+.wcag-options {
+  margin: 6px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+}
+
+.wcag-options button,
+.wcag-options a {
+  display: flex; /* Stack buttons vertically */
+  width: 100%; /* Full width */
+  background-color: #fff; /* Button color */
+  color: #007bff; /* Text color */
+  border: 2px solid #007bff;
+  cursor: pointer; /* Pointer cursor on hover */
+  flex: 1 1 calc(50% - 12px);
+  font-size: 10px;
+  line-height: 1.1;
+  text-decoration: none;
+  border-radius: 6px;
+  align-items: center;
+  font-weight: 500;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+
+.wcag-options button:hover {
+  background-color: #007bff; /* Darker shade on hover */
+  color: #fff;
+}
+.wcag-options button img {
+  height: auto;
+  width: 40px;
+  max-width: 100%;
+}
